#171 [Lokesh/Nimesh] fixing caption wrapping

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -57,6 +57,8 @@
 
   }
   .caption {
+    clear: left;
+    display: block;
     text-align: center;
     font-size: 15px;
     color: grey;
@@ -172,7 +174,6 @@
       margin: 10px 7px 5px 7px;
       .image {
         display: table-cell;
-        width: 100%;
       }
       .photo-credits {
         position: absolute;
